<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  tools:context=".presentation.start.StartFragment">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_0"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.64" />

  <TextView
    android:id="@+id/tv_description"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:text="@string/modeAuto"
    android:textColor="@color/gray_dark"
    android:textSize="@dimen/font_26"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/guideline_1"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.1" />

  <View
    android:id="@+id/view_top"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/gray"
    app:layout_constraintBottom_toBottomOf="@+id/guideline_1"
    app:layout_constraintEnd_toEndOf="@+id/guideline_1"
    app:layout_constraintStart_toStartOf="@+id/guideline_1"
    app:layout_constraintTop_toTopOf="@+id/guideline_1" />

  <TextView
    android:id="@+id/tv_subject"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:textColor="@color/gray_dark"
    android:textSize="@dimen/font_24"
    app:layout_constraintBottom_toTopOf="@+id/iv_valve"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/guideline_1"
    tools:text="@string/valveOpen" />

  <ImageView
    android:id="@+id/iv_valve"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin32"
    android:src="@drawable/valve1_close"
    app:layout_constraintBottom_toTopOf="@+id/view_bottom"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <ImageView
    android:id="@+id/iv_air1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_air"
    android:visibility="invisible"
    app:layout_constraintBottom_toTopOf="@+id/guideline_2"
    app:layout_constraintStart_toStartOf="@+id/guideline_0"
    app:layout_constraintTop_toTopOf="@+id/iv_valve"
    app:layout_constraintVertical_bias="0.205" />

  <ImageView
    android:id="@+id/iv_air2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_air"
    android:visibility="invisible"
    app:layout_constraintBottom_toTopOf="@+id/guideline_2"
    app:layout_constraintStart_toStartOf="@+id/guideline_0"
    app:layout_constraintTop_toTopOf="@+id/iv_valve"
    app:layout_constraintVertical_bias="0.386" />

  <ImageView
    android:id="@+id/iv_air3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_air"
    android:visibility="invisible"
    app:layout_constraintBottom_toTopOf="@+id/guideline_2"
    app:layout_constraintStart_toStartOf="@+id/guideline_0"
    app:layout_constraintTop_toTopOf="@+id/iv_valve"
    app:layout_constraintVertical_bias="0.427" />


  <View
    android:id="@+id/view_bottom"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/gray"
    app:layout_constraintBottom_toBottomOf="@+id/guideline_2"
    app:layout_constraintEnd_toEndOf="@+id/guideline_2"
    app:layout_constraintStart_toStartOf="@+id/guideline_2"
    app:layout_constraintTop_toTopOf="@+id/guideline_2" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.9" />

  <RadioGroup
    android:id="@+id/toggleGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/view_bottom">

    <RadioButton
      android:id="@+id/rdb_main_red"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:checked="true"
      android:text="Red" />

    <RadioButton
      android:id="@+id/rdb_main_green"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Green" />

    <ToggleButton
      android:id="@+id/btn_valve1"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/valve1_open"
      android:textAlignment="center"
      android:textAllCaps="false"
      android:textSize="@dimen/font_10"
      android:visibility="visible" />

    <Button
      android:id="@+id/btn_valve2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/valve2_open"
      android:textAlignment="center"
      android:textAllCaps="false"
      android:textSize="@dimen/font_10" />

    <Button
      android:id="@+id/btn_valve3"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/valve3_open"
      android:textAlignment="center"
      android:textAllCaps="false"
      android:textSize="@dimen/font_10"
      android:visibility="visible" />

  </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>